--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "LIENHART MICHAEL",
   "license": "ISC",
   "dependencies": {
-    "emailjs": "^4.0.3"
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0"
   }
 }
